assets/css/main.css
/* ====================================================*/
/* Layout and typography */


body{
	font-family: 'nta', sans-serif;
	padding: 25px 50px 50px;
	margin: 0;
	padding-bottom: 100px;
}
h1{
	margin-bottom: 50px;
	font-size: 40px;
	margin-top: 10px;
}
h2{
	font-size: 20px;
}
a{
	color: #005EA5;
}
.intro{
	font-size: 19px;
	width: 66.66%;
	margin-bottom: 40px;
}
.exemplar-list{
	padding-left: 0;
	color: #6f777b;
}
.exemplar-list li{
	font-size: 19px;
	padding-top: 3px;
	margin-bottom:  10px;
	list-style-type: none;
}
.exemplar-list a:hover{
	color: #2E8ACA;
  	text-decoration: none;
}
.app-header{
	color: #6f777b;
	font-size: 16px;
	margin-top: 0;
}
.meta{
	color: #6f777b;
	margin: 75px 0 50px 0;
	font-size: 16px;
	width: 33.33%;
}

/* ====================================================*/
/* Zoomed-in screen */

.screen.zoomed-in{
	position: fixed;

	background: #FFF;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	z-index: 1001;
}
.screen.zoomed-in .caption{
	float: right;
	width: 24.5%;
	font-size: 19px;
	font-weight: bold;
	margin-top: 22px;
}
.screen.zoomed-in .caption.hidden{
	height: auto;
}
.screen.zoomed-in .caption.hidden h2{
	display: block;
}
.screen.zoomed-in .caption .journey{
	margin-left: 25px;
	white-space: normal;
	padding-right: 45px;
	font-size: 16px;
}
.screen.zoomed-in .caption h2{
	margin-left: 25px;
	white-space: normal;
	padding-right: 45px;
	font-size: 19px;
	font-weight: bold;
}
.screen.zoomed-in .image{
	height: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
    width: 75%;
	float: left;
	border: 0;
	border-right: 1px solid #BFC1C3;
	box-sizing: padding-box;
}

.image::-webkit-scrollbar {
	width: 0 !important;
	height: 0 !important;
}
.screen.zoomed-in .image img{
	margin-bottom: 0;
}
.screen.zoomed-in .image img:hover{
	cursor: default;
}
.screen.zoomed-in .arrow{
	display: none;
}
.screen.zoomed-in .close{
	display: block;
	float: right;
	margin-right: 25px;
	font-weight: normal;
	font-size: 16px;
	padding-top: 4px;
}
.screen.zoomed-in .close:hover{
	text-decoration: underline;
	cursor: pointer;
}
.screen.zoomed-in .note{
	display: block;
	float: right;
	width: 25%;
}
.screen.zoomed-in .note p{
	white-space: normal;
	margin-left: 25px;
	font-size: 19px;
	margin-top: 0;
}

.screen.zoomed-in .button{
	display: none;
	display: inline-block;
	background: #DEE0E2;
	margin: 25px 0;
	position: fixed;
	bottom: 0;

	font-size: 19px;

	padding: 8px 30px 4px 30px;
	-webkit-box-shadow: 0 2px 0 #003518;
	-moz-box-shadow: 0 2px 0 #003518;
	box-shadow: 0 2px 0 #003518;
	-webkit-font-smoothing: antialiased;
}

.screen.zoomed-in .button:hover{
	cursor: pointer;
}

.screen.zoomed-in .button.next{
	background-color: #00823B;
	color: white;
	right: 25px;
}
.screen.zoomed-in .button.next:hover{
	background-color: #00692F;
}
.screen.zoomed-in .button.next:active{
	-webkit-box-shadow: 0 0 0 #00823B;
	-moz-box-shadow: 0 0 0 #00823b;
	box-shadow: 0 0 0 #00823B;
}
.screen.zoomed-in .journey{
	display: block;
	margin-bottom: 20px;
}
html.noscroll {
    position: fixed;
    top: 0;
    left: 0;
    overflow-y: scroll;
    width: 100%;
}

/* ====================================================*/
/* Toolbar */

.toolbar{
	position: fixed;
	top: 0;
	right: 0;
	z-index: 100;
}


/* ====================================================*/
/* Full height images toggle */

.js-full-height{
	float: right;
	text-indent: -9999px;
	width: 15px;
	height: 23px;
	background: url(full-height.png);
	margin-top: 27px;
}
.js-full-height:hover{
	cursor: pointer;
}

.full-height .image{
	height: auto;
}
.full-height .image img{
	margin-bottom: 0;
}


/* ====================================================*/
/* Zoom slider */

#slider{
	float: right;
	margin: 28px 25px 0 25px;
}


/* ====================================================*/
/* Open / Close all toggle */

.js-close-all,
.js-open-all{
	font-size: 16px;
	color: #005EA5;
  	text-decoration: underline;
}
.js-close-all:hover,
.js-open-all:hover{
	color: #2E8ACA;
  	cursor: pointer;
  	text-decoration: none;
}
.js-close-all{
	display: none;
}


/* ====================================================*/
/* User journeys */

.userjourney{
   width: auto;
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
   margin: 10px -50px 35px -50px;
   border-top: 1px solid #bfc1c3;
   border-bottom: 1px solid #bfc1c3;
   /* background: #f7f7f7; */
   padding-left: 50px;
   padding-right: 200px;
}
.js-zoomed .userjourney{
	overflow-x: hidden;
}
.userjourney .screen:last-child .arrow{
	display: none;
}
details{
	margin: 10px 0;
}
summary{
	font-size: 19px;
	padding-left: 16px;
	padding-top: 3px;
	text-indent: -16px;
	text-decoration: underline;
	color: #2E3191;
	margin-bottom:  10px;
	outline: none;
	display: inline-block;
}
summary:hover{
  text-decoration: none;
  cursor: pointer;
  color: #2E8ACA;
}
details[open] summary{
	color: black;
	font-weight: bold;
	text-decoration: none;
}
details[open] summary:hover{
	text-decoration: underline;
}
summary::-webkit-details-marker { display:none; }



/* ====================================================*/
/* Screens */

.screen{
    display: inline-block;
    padding-right: 10px;
		position: relative;
    vertical-align: top;
    margin-bottom: 50px;
}
.image{
	width: 8em;

	border: 1px solid #BFC1C3;
	height: 8em;
	overflow: hidden;
	background: #DEE0E2;
	display: inline-block;
	vertical-align: middle;
}
.image.scrollable{
	overflow: scroll;
	overflow-x: hidden;
}
.image:hover{
	cursor: pointer;
}
.image img{
	width: 100%;
	margin-bottom: 100px;
}
.note{
	display: none;
}
.note.visible{
	display: block;
	margin-top: 25px;
}
.close{
	display: none;
}
.caption{
	margin: 25px 0 15px 0;
}
.caption h2,
.note p{
	font-size: 16px;
	margin: 0 0 10px 0;
	font-weight: normal;
	margin-right: 25px;
}
.caption.hidden{
	height: 10px;
}
.caption.hidden h2{
	display: none;
}
.arrow{
	display: inline-block;
	font-size: 30px;
	margin-left: 10px;
	vertical-align: middle;
}
.journey{
	display: none;
}
.next.button,
.prev.button{
	display: none;
}

